Alignment fixes.

--- a/frontend/app/features/content/pages/content/content-page.component.scss
+++ b/frontend/app/features/content/pages/content/content-page.component.scss
@@ -11,7 +11,7 @@
     flex-wrap: nowrap;
 
     a {
-        padding-bottom: 1.5rem;
+        padding-bottom: 1.75rem;
     }
 }
 
