--- a/frontend/app/shared/components/notifo.component.scss
+++ b/frontend/app/shared/components/notifo.component.scss
@@ -13,7 +13,6 @@
         .notifo-topics-button {
             margin-left: .75rem;
             margin-right: .75rem;
-            margin-top: .25rem;
 
             svg {
                 fill: $color-text-decent;
